commit before dealing with multiple .log files

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div id="loading-spinner"></div>
       <div id="loading-text">Loading...</div>
     </div>
-
+    <div id="downloadContainer"></div>
     <div class="container">
       <div class="left-section">
         <h3>Delimiters</h3>
