--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </head>
   <body>
     <div id="welcomeScreen">
-      <h2>Welcome the MSA XT-Rator</h2>
+       <h2>Welcome | the MSA XT-Rator</h2>
       <form>
         <label for="zipFileForum" class="file-upload-label">
           <span class="material-icons-outlined" style="color: #47fa1a"
