--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <span class="material-icons-outlined" style="color: #47fa1a"
             >file_upload</span
           >
-          Select Log
+          Select Log(.Zip)
         </label>
         <input
           type="file"
